16 July 2007

* Outright reject configuration files that uses caches unless built with -DDB,
  rather than waiting until the cache is used.
* Rewrite the malloc debugging stuff: lose the call counting, use a splay
  tree instead of a fixed array and use __builtin_return_address and direct
  calls from xmalloc.c rather than horrible #define games, even if it means 
  the ultimate output is less useful.

15 July 2007

* Permit each account to start multiple delivery child processes simultaneously
  (up to the maximum queue length). This doesn't help much in normal cases but
  with particularly lengthy but non-CPU-intensive delivery actions (try exec
  "sleep 1" ;-P), it can help a lot.
* Introduce some randomness into the lock sleep delay when waiting for mboxes.

14 July 2007

* Use mremap(2) on Linux.
 
13 July 2007

* Fix stupid bug (grr) in strb.c which caused a segfault if realloc moved the
  buffer when it was being expanded; also clean up macros a bit when here.

11 July 2007

* Add %[mail_rfc822date] which contains the mail date and time (or current date
  and time if invalid) in RFC822 format and %[rfc822date] which is the same for
  the current date/time. I probably need to stop adding tags now $() works.
* Additional example from Giorgio Lando (examples/g-lando.conf).
* Add two-digit year (year2/mail_year2) and hostname tags.
* Simplify fetching: line counting and body detection is now done globally for
  all fetch types in the mail queuing code, as is checking for empty and 
  oversize mails.
* There is now no concept of a body-less mail (m->body == -1). Mails with
  no separating blank line are assumed to be entirely body (m->body == 0),
  otherwise the body is the first byte after the separator.
* Fix a long-standing bug in openlock (mail.c): if open(2) failed, the lock
  file was not removed.
* NNTPS fetching, suggested by Maximilian Gass.
* After rethinking, remove some useless fclose error checks.

08 July 2007
