@@ -1,6 +1,12 @@
+17 July 2007
+
+* Use SO_RCVTIMEO to apply configured timeout when connecting to SSL servers
+  (SSL_connect must block as the easiest way to ensure the certificate is
+  received before checking its validity).
+
 16 July 2007
 
-* Outright reject configuration files that uses caches unless built with -DDB,
+* Outright reject configuration files that use caches unless built with -DDB,
   rather than waiting until the cache is used.
 * Rewrite the malloc debugging stuff: lose the call counting, use a splay
   tree instead of a fixed array and use __builtin_return_address and direct
@@ -461,4 +467,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.115 2007-07-17 00:03:41 nicm Exp $
+$Id: CHANGES,v 1.116 2007-07-17 18:31:07 nicm Exp $
